<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.xxs3315.mbl</groupId>
	<artifactId>api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>mbl-pdf</name>
	<description>mbl pdf</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.1</version>
		</dependency>

		<dependency>
			<groupId>net.arnx</groupId>
			<artifactId>jsonic</artifactId>
			<version>1.3.10</version>
		</dependency>

		<!-- H2数据库 - 轻量级嵌入式数据库 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<!-- PostgreSQL数据库 -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<!-- Spring Data JPA -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		
		<!-- 图片处理依赖 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		
		<!-- Apache Commons IO for file operations -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.20.0</version>
		</dependency>

		<!-- pdf -->
		<dependency>
			<groupId>com.helger</groupId>
			<artifactId>ph-pdf-layout</artifactId>
			<version>8.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.commons</groupId>
			<artifactId>ph-commons</artifactId>
			<version>12.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.commons</groupId>
			<artifactId>ph-collection</artifactId>
			<version>12.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-api</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-noto-sans-hk</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-noto-sans-sc</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-noto-sans-tc</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-alegreya-sans</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-anaheim</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-exo2</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-kurinto-mono</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-kurinto-sans</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-lato2</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-markazi</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-open-sans</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-roboto</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-source-sans3</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.helger.font</groupId>
			<artifactId>ph-fonts-source-sans-pro</artifactId>
			<version>6.0.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
